Add GitHub integration module with webhook support
Features:
- GitHub API client with OAuth 2.0 and PAT support
- Support for github.com and GitHub Enterprise
- Automatic rate limit handling with retry logic
- Repository cloning and analysis utilities
- File categorization (infrastructure, code, config)
- Dependency extraction (npm, Python, Go, Maven)
- SHA256 checksums for all files
- Concurrent repository processing

Webhook Handler:
- HMAC-SHA256 signature verification
- Push event processing
- Pull request event handling
- Automated threat model creation
- PR comment posting with findings
- GitHub issue creation for threats
- Webhook statistics and monitoring

API Endpoints:
- POST /api/webhooks/github - Receive GitHub webhooks
- GET /api/webhooks/stats - Webhook statistics
- POST /api/webhooks/trigger-analysis - Manual repository analysis
- POST /api/webhooks/create-issue - Create GitHub issue for threat

Files:
- services/github.service.ts - GitHub API client
- services/webhookService.ts - Webhook processing
- controllers/webhookController.ts - HTTP handlers
- routes/webhook.routes.ts - API routes
- utils/gitOperations.ts - Git operations and repo analysis

--- a/backend/api/.env.example
+++ b/backend/api/.env.example
@@ -31,3 +31,8 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS
 CORS_ORIGIN=http://localhost:3001,http://localhost:3000
+
+# GitHub Integration
+GITHUB_TOKEN=ghp_your_github_personal_access_token
+GITHUB_ENTERPRISE_URL=https://github.your-company.com
+GITHUB_WEBHOOK_SECRET=your_webhook_secret_here
