--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,120 @@
-# Environment Configuration for Threat Modeling Platform
+# ============================================
+# Threat Modeling Platform - Unified Configuration
+# ============================================
+# Copy this file to .env and customize for your environment
+# Generate secure keys: openssl rand -hex 32
 
 # ============================================
-# Database Configuration
+# Application Environment
 # ============================================
-DB_ENCRYPTION_KEY=your-secure-encryption-key-here-change-in-production
-DB_DATA_PATH=./data/db
-DB_BACKUP_PATH=./data/backups
+NODE_ENV=production
+LOG_LEVEL=info
 
 # ============================================
 # API Backend Configuration (Node.js)
 # ============================================
-NODE_ENV=production
 PORT=3001
-JWT_SECRET=your-jwt-secret-key-change-in-production
+
+# JWT Configuration (RS256 Algorithm)
+# Generate RSA keypair:
+#   openssl genrsa -out private.pem 2048
+#   openssl rsa -in private.pem -pubout -out public.pem
+# Then base64 encode or provide file paths
+JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY=
 JWT_EXPIRY=24h
-CORS_ORIGIN=http://localhost
-LOG_LEVEL=info
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
 
 # ============================================
-# Analysis Service Configuration (Python)
+# Database Configuration
+# ============================================
+DB_PATH=./data/threat-models.db
+DB_ENCRYPTION_KEY=change-this-in-production-use-openssl-rand-hex-32
+DB_BACKUP_PATH=./data/backups
+
+# ============================================
+# Analysis Service Configuration (Python/Flask)
 # ============================================
 FLASK_ENV=production
 FLASK_APP=app.py
+ANALYSIS_SERVICE_URL=http://localhost:5000
 
-# LLM Provider Configuration
+# ============================================
+# LLM Configuration (OPTIONAL - disable to run without AI features)
+# ============================================
+# Set ENABLE_LLM=false to disable AI-powered threat analysis
+ENABLE_LLM=true
+
+# LLM Provider: openai or anthropic
 LLM_PROVIDER=openai
 LLM_MODEL=gpt-4
 MAX_TOKENS=4096
 TEMPERATURE=0.7
 
-# API Keys (Required for LLM analysis)
+# API Keys (Required only if ENABLE_LLM=true)
 OPENAI_API_KEY=sk-your-openai-api-key-here
 ANTHROPIC_API_KEY=sk-ant-your-anthropic-api-key-here
+
+# ============================================
+# Jira/Atlassian Integration (OPTIONAL - disable to run without Jira)
+# ============================================
+# Set ENABLE_JIRA=false to disable Jira integration
+ENABLE_JIRA=false
+
+# Jira Configuration (Required only if ENABLE_JIRA=true)
+# Generate token at: https://id.atlassian.com/manage-profile/security/api-tokens
+JIRA_HOST=your-company.atlassian.net
+JIRA_EMAIL=your-email@company.com
+JIRA_API_TOKEN=your-jira-api-token-here
+JIRA_PROJECT_KEY=SEC
+JIRA_DEFAULT_ASSIGNEE=
+JIRA_WEBHOOK_SECRET=
+
+# ============================================
+# GitHub Integration (OPTIONAL)
+# ============================================
+ENABLE_GITHUB=false
+GITHUB_TOKEN=ghp_your_github_personal_access_token
+GITHUB_ENTERPRISE_URL=
+GITHUB_WEBHOOK_SECRET=your_webhook_secret_here
 
 # ============================================
 # Frontend Configuration (React)
 # ============================================
 REACT_APP_API_URL=http://localhost/api
 REACT_APP_ANALYSIS_URL=http://localhost/analysis
+REACT_APP_ENABLE_LLM=true
+REACT_APP_ENABLE_JIRA=false
 
 # ============================================
-# Docker & Infrastructure
+# Docker & Infrastructure (for production)
 # ============================================
-# Uncomment for production deployment
-# COMPOSE_PROJECT_NAME=threat-model-platform
+COMPOSE_PROJECT_NAME=threat-model-platform
 # COMPOSE_FILE=docker-compose.yml:docker-compose.prod.yml
 
 # ============================================
-# Security Notes
+# Logging Configuration
 # ============================================
-# 1. Generate secure keys using: openssl rand -hex 32
-# 2. Never commit .env file with actual secrets
-# 3. Use secrets management in production (e.g., AWS Secrets Manager, HashiCorp Vault)
-# 4. Rotate keys regularly
-# 5. Use separate keys for each environment (dev/staging/prod)
+LOG_FILE=./logs/app.log
+
+# ============================================
+# Security Checklist
+# ============================================
+# Before deploying to production:
+# [ ] Change DB_ENCRYPTION_KEY (use: openssl rand -hex 32)
+# [ ] Generate JWT RSA keypair (use commands above)
+# [ ] Add your LLM API keys (if ENABLE_LLM=true)
+# [ ] Configure Jira credentials (if ENABLE_JIRA=true)
+# [ ] Set appropriate CORS_ORIGIN domains
+# [ ] Review rate limiting settings
+# [ ] Enable HTTPS/TLS in production
+# [ ] Never commit .env file with real secrets
+# [ ] Use secrets manager in production (AWS Secrets Manager, Vault, etc.)
+# [ ] Rotate keys regularly
+# [ ] Use separate .env for dev/staging/prod environments
