--- a/backend/package.json
+++ b/backend/package.json
@@ -26,12 +26,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.0",
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.4",
-    "express": "^5.2.1",
-    "helmet": "^8.1.0",
+    "better-sqlite3": "^9.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "pg": "^8.18.0",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
