--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,6 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@tabler/icons-react": "^3.0.0",
     "@tanstack/react-query": "^5.20.1",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/d3": "^7.4.3",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
-    "@types/react": "^19.2.13",
-    "@types/react-dom": "^19.2.3",
     "axios": "^1.6.7",
     "d3": "^7.9.0",
     "mermaid": "^10.8.0",
@@ -32,6 +23,17 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/d3": "^7.4.3",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
